# cppmsg

./: .gitignore  .travis.yml  LICENSE  README.md  appveyor.yml  gitpush.sh  wsl_path2.txt
msg/samples/: CMakeLists.txt  arenaperf.cc  basic.cc  benchresult.txt  client.cc  main.cc  perf.cc  perfcli.cc  perfsvr.cc  sample.h  server.cc  test.md
msg/src/: CMakeLists.txt  acceptor.h  async_svr.h  caller.h  connector.h  def.h  defs.h  endpoint.cc  endpoint.h  ep.h  global.h  message.cc  message.h  mq.h  msgpool.h  pattern.h  pipe.h  protocol.h  session.cc  session.h  socket.h  taskpool.cc  taskpool.h
msg/src/api/: connection.h  connector.h  listener.h  message.h
msg/src/channel/: ack_connection.cc  ack_connection.h  basic_connection.1.h.bk  basic_connection.cc  basic_connection.h  checksum_connection.cc  checksum_connection.h  conn.cc  connection.cc  connection.h  fast_pipe.h  healthcheck_connection.cc  healthcheck_connection.h  iotask.cc  iotask.h  pingpong_connection.cc  pingpong_connection.h  pipe.cc  pipe.h
msg/src/common/: Readme.md  arena.h  blockable.h  clock.cc  clock.h  concurrentq.h  fd.cc  fd.h  ilist.h  log.cc  log.h  status.cc  status.h  taskpool.cc  taskpool.h
msg/src/connector/: connect_task.cc  connector.cc  reconnector.h
msg/src/listener/: listener.h
msg/src/neuron/: axon.h  dendrite.h  pathway.h
msg/src/posix/: clock.cc  clock.h  conn.h  event.cc  event.h  fd.cc  fd.h  iotask.cc  iotask.h  msgbuf.cc  msgbuf.h  reactor.cc  reactor.h  sig.cc  sig.h  timer.cc  timer.h
msg/src/protocol/: Readme.md  channel.h  connection.cc  connection.h  connector.cc  connector.h  endpoint.cc  endpoint.h  listener.cc  listener.h  message.cc  message.h  reconnector.cc  reconnector.h  relistener.h
msg/src/reactor/: Readme.md  event.cc  event.h  reactor.cc  reactor.h  sig.cc  sig.h  timer.cc  timer.h
msg/src/session/: client_session.cc  client_session.h  logical_session.cc  logical_session.h  session.cc  session.h  stateful_server_session.cc  (+3 more)
(+112 files in other folders)
