aux_source_directory(. ss1)
aux_source_directory(./channel ss2)
aux_source_directory(./connector ss3)
aux_source_directory(./listener ss4)
aux_source_directory(./system ss5)
aux_source_directory(./common ss6)
add_library(msg ${ss1} ${ss2} ${ss3} ${ss4} ${ss5} ${ss6})  
if(UNIX)
	target_link_libraries(msg pthread)
endif()

